force-app/main/default/objects/SMS_History__c/SMS_History__c.object-meta.xml
<CustomObject>
    <label>SMS History</label>
    <nameField>
        <displayFormat>SMS-{000000000}</displayFormat>
        <label>SMS History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>