force-app/main/default/objects/SMS_History__c/fields/Abbreviations__c.field-meta.xml
<CustomField>
    <fullName>Abbreviations__c</fullName>
    <formula>IF( ISPICKVAL( AccountCustomer__r.Language__c ,&apos;English&apos;) ,
IF( ISPICKVAL(  AccountCustomer__r.Gender__c , &apos;Male&apos;) , &apos;Mr&apos;, &apos;Ms&apos;) ,
IF( ISPICKVAL(  AccountCustomer__r.Gender__c, &apos;Male&apos;) , &apos;anh&apos;, &apos;chi&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abbreviations</label>
    <type>Text</type>
</CustomField>