force-app/main/default/objects/SMS_History__c/fields/AccountCustomer__c.field-meta.xml
<CustomField>
    <fullName>AccountCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Histories</relationshipLabel>
    <relationshipName>SMS_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>