force-app/main/default/objects/SMS_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SMS Histories</relationshipLabel>
    <relationshipName>SMS_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>