force-app/main/default/objects/SMS_History__c/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO/DL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Histories (DO/DL)</relationshipLabel>
    <relationshipName>SMS_Histories_DODL</relationshipName>
    <type>Lookup</type>
</CustomField>