force-app/main/default/objects/SMS_History__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS_Brandname_000</fullName>
                <label>NoError (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_001</fullName>
                <label>InputNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_100</fullName>
                <label>TokenNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_101</fullName>
                <label>UserIsLock (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_102</fullName>
                <label>UserNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_103</fullName>
                <label>UserNotRoleValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_304</fullName>
                <label>DuplicateMessage (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_904</fullName>
                <label>BrandnameNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_002</fullName>
                <label>MessageTypeNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_003</fullName>
                <label>MessageTypeNotAllow (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_005</fullName>
                <label>ReceiverNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_006</fullName>
                <label>TelcoNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_007</fullName>
                <label>ContentContainsBlockedWord (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_008</fullName>
                <label>ContentContainsUnicode (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_009</fullName>
                <label>ContentNotValidateGsm0338 (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_010</fullName>
                <label>LengthOfContentNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_011</fullName>
                <label>NotMatchTemplate (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_012</fullName>
                <label>TelcoNotAllow (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_013</fullName>
                <label>MsisdnInBlacklist (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_014</fullName>
                <label>AccountNotEnoughToPay (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_015</fullName>
                <label>AccountNotEnoughQuota (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_016</fullName>
                <label>ScheduledNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_017</fullName>
                <label>OrderCodeNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_018</fullName>
                <label>PackageCodeNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_019</fullName>
                <label>MsisdnNotValid | ReceiverNotEnough (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_020</fullName>
                <label>TelcoFilter (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_021</fullName>
                <label>BlockingTimeAdv (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_022</fullName>
                <label>FormatOfContentNotValid (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_024</fullName>
                <label>OverMaxMT (SMS Brandname)</label>
            </value>
            <value>
                <fullName>SMS_Brandname_801</fullName>
                <label>TemplateNotSet (SMS Brandname)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>