force-app/main/default/objects/SMS_History__c/fields/From_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Brand_Name__c</fullName>
    <label>From Brand Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>