force-app/main/default/objects/SMS_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Histories</relationshipLabel>
    <relationshipName>SMS_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>