force-app/main/default/objects/SMS_History__c/fields/Link_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Link_Suffix__c</fullName>
    <label>Link Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>