force-app/main/default/objects/SMS_History__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>