force-app/main/default/objects/SMS_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SMS Histories</relationshipLabel>
    <relationshipName>SMS_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>