force-app/main/default/objects/SMS_History__c/fields/Queue_For_SMS__c.field-meta.xml
<CustomField>
    <fullName>Queue_For_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to queue and process the SMS after insert</description>
    <label>Queue For SMS</label>
    <type>Checkbox</type>
</CustomField>