force-app/main/default/objects/SMS_History__c/fields/Request_SMS__c.field-meta.xml
<CustomField>
    <fullName>Request_SMS__c</fullName>
    <label>Request SMS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>