force-app/main/default/objects/SMS_History__c/fields/Scheduled_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_Time__c</fullName>
    <label>Scheduled Send Time</label>
    <type>DateTime</type>
</CustomField>