force-app/main/default/objects/SMS_History__c/fields/Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Time__c</fullName>
    <description>Leave this field empty if you want to send the SMS immediately</description>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>