force-app/main/default/objects/SMS_History__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale Bike Process - Order</fullName>
            </value>
            <value>
                <fullName>Sale PCA Process - Order</fullName>
            </value>
            <value>
                <fullName>Service - Booking</fullName>
            </value>
            <value>
                <fullName>Service Process  - Order</fullName>
            </value>
            <value>
                <fullName>Survey Sending</fullName>
            </value>
            <value>
                <fullName>Automatic send Case Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>