force-app/main/default/objects/SMS_History__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>SMS_Brandname_Template__c</referenceTo>
    <relationshipLabel>SMS Histories</relationshipLabel>
    <relationshipName>SMS_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>