force-app/main/default/objects/SMS_History__c/fields/To_Phone__c.field-meta.xml
<CustomField>
    <fullName>To_Phone__c</fullName>
    <label>To Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>