force-app/main/default/objects/SMS_History__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS_Brandname_1</fullName>
                <label>Customer Support</label>
            </value>
            <value>
                <fullName>SMS_Brandname_6</fullName>
                <label>Order</label>
            </value>
            <value>
                <fullName>SMS_Brandname_2</fullName>
                <label>Ad</label>
            </value>
            <value>
                <fullName>VNPAY_SMS_Brandname_0</fullName>
                <label>Normal SMS</label>
            </value>
            <value>
                <fullName>VNPAY_SMS_Brandname_1</fullName>
                <label>OTP SMS</label>
            </value>
            <value>
                <fullName>AZTECH_SMS_Brandname_1</fullName>
                <label>Notify Message</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>