force-app/main/default/objects/SMS_History__c/fields/Use_Unicode__c.field-meta.xml
<CustomField>
    <fullName>Use_Unicode__c</fullName>
    <label>Use Unicode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SMS_Unicode_Setting</valueSetName>
    </valueSet>
</CustomField>