force-app/main/default/objects/SMS_History__c/fields/VNPT_Code__c.field-meta.xml
<CustomField>
    <fullName>VNPT_Code__c</fullName>
    <label>VNPT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>