force-app/main/default/objects/SMS_History__c/recordTypes/SMS_Brandname.recordType-meta.xml
<RecordType>
    <fullName>SMS_Brandname</fullName>
    <active>false</active>
    <label>SMS Brandname</label>
</RecordType>