force-app/main/default/objects/SMS_History__c/recordTypes/VNPAY_SMS_Brandname.recordType-meta.xml
<RecordType>
    <fullName>VNPAY_SMS_Brandname</fullName>
    <active>false</active>
    <label>VNPAY SMS Brandname</label>
</RecordType>