force-app/main/default/objects/SMS_History__c/recordTypes/VNPT_Brandname.recordType-meta.xml
<RecordType>
    <fullName>VNPT_Brandname</fullName>
    <active>true</active>
    <label>VNPT Brandname</label>
</RecordType>