force-app/main/default/objects/SMS_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountCustomer__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Template__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>